agregando componente input al search

--- a/client/src/componets/molecules/search/Search.module.scss
+++ b/client/src/componets/molecules/search/Search.module.scss
@@ -2,6 +2,12 @@
   font-size: 28px;
   cursor: pointer;
   color: yellow;
+  text-align: right;
+}
+.div_search {
+  margin-top: 10px;
+  margin-left: 5px;
+
 }
 
 
