--- a/client/src/componets/organisms/header/Header.module.scss
+++ b/client/src/componets/organisms/header/Header.module.scss
@@ -17,6 +17,8 @@
   .aboutContact {
   }
   .div_search {
+    display: flex;
+    justify-content: flex-end;
     align-self: center;
     text-align: right;
     margin-right: 50px;
